# afl-analytics

./: .gitignore  Build.sh  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: pyafl_to_arpadl_actions.ipynb  pyafl_to_atomic_arpadl_actions.ipynb  stars_ar.ipynb
src/afl_analytics/arpadl/: README.md  config.py  pyafl.py  schema.py
src/afl_analytics/arpadl/atomic/: base.py  config.py  schema.py
src/afl_analytics/stars_ar/: clustering.py  phase.py  ratings.py
src/afl_analytics/vaep/: base.py  features.py  formula.py  labels.py
tests/: test_arpadl.py
